fixed spacing on header

--- a/style.css
+++ b/style.css
@@ -757,11 +757,8 @@ input {
    .empty-message {
       margin-block-start: 70px;
    }
-}
-
-@media only screen and (max-width: 325px) {
    .header {
-      padding-block: 40px;
+      padding-block: 25px;
    }
 }
 
